# mcp-server-http-request

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mcp_server_http_request/: __init__.py  __main__.py  server.py
