[project]
name = "mcp-server-http-request"
version = "0.1.0"
description = "A Model Context Protocol server providing tools to make HTTP requests (GET, POST, PUT, PATCH, DELETE)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Esteban Safranchik", email = "esteban@statespace.com" },
    { name = "Gavin Chan", email = "gavin@statespace.com" }
]
keywords = ["http", "mcp", "llm", "automation", "rest", "api"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "httpx<0.28",
    "mcp>=1.1.3",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-server-http-request = "mcp_server_http_request:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]
